apps/fediverse/mastodon/ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: external-service-mastodon
  namespace: mastodon
spec:
  ports:
    - name: https
      port: 443
      protocol: TCP
      targetPort: 443
  clusterIP: None
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: external-service-mastodon
  namespace: mastodon
subsets:
  - addresses:
      - ip: 137.184.168.240
    ports:
      - name: https
        port: 443
        protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: external-service-mastodon
  namespace: mastodon
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: "${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: external-service-mastodon
                port:
                  number: 443
  tls:
    - hosts:
        - "${SECRET_DOMAIN}"
